stats time for ppo

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot_utils import data_dict, data_dict_icml, max_episodes_dict\n",
+    "from plot_utils import data_dict, data_dict_icml, max_episodes_dict, MOUNTAINCARCONTINUOUS_K, PENDULUM_K\n",
+    "from run_icml import split_max_episodes\n",
     "from numpy import mean\n",
     "import pandas as pd\n",
     "pd.set_option('display.float_format', lambda x: '%.3f' % x)"
@@ -14,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +198,12 @@
        "      <th>10</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>0.719</td>\n",
-       "      <td>0.402</td>\n",
-       "      <td>204020978.288</td>\n",
-       "      <td>47719812.385</td>\n",
-       "      <td>407.353</td>\n",
-       "      <td>94.292</td>\n",
+       "      <td>0.706</td>\n",
+       "      <td>0.423</td>\n",
+       "      <td>188131599.149</td>\n",
+       "      <td>42681942.763</td>\n",
+       "      <td>369.512</td>\n",
+       "      <td>89.419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -351,12 +352,12 @@
        "      <th>18</th>\n",
        "      <td>ppo</td>\n",
        "      <td>Acrobot-v1</td>\n",
-       "      <td>0.016</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>-153713306.400</td>\n",
-       "      <td>1439701.206</td>\n",
-       "      <td>-481.886</td>\n",
-       "      <td>3.931</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>-154483956.000</td>\n",
+       "      <td>314872.537</td>\n",
+       "      <td>-483.553</td>\n",
+       "      <td>2.048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -364,10 +365,10 @@
        "      <td>CartPole-v1</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>61066523.600</td>\n",
-       "      <td>1106634.036</td>\n",
-       "      <td>21.237</td>\n",
-       "      <td>0.277</td>\n",
+       "      <td>61333226.200</td>\n",
+       "      <td>652239.629</td>\n",
+       "      <td>21.256</td>\n",
+       "      <td>0.219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -375,10 +376,10 @@
        "      <td>LunarLander-v2</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>-240797829.700</td>\n",
-       "      <td>3060855.259</td>\n",
-       "      <td>-83.295</td>\n",
-       "      <td>1.386</td>\n",
+       "      <td>-236985767.351</td>\n",
+       "      <td>10486693.915</td>\n",
+       "      <td>-82.696</td>\n",
+       "      <td>2.677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -386,32 +387,32 @@
        "      <td>MountainCar-v0</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>-185245079.119</td>\n",
-       "      <td>1397603.512</td>\n",
-       "      <td>-92.678</td>\n",
-       "      <td>0.762</td>\n",
+       "      <td>-184055625.138</td>\n",
+       "      <td>1055579.186</td>\n",
+       "      <td>-92.338</td>\n",
+       "      <td>0.710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>ppo</td>\n",
        "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>0.144</td>\n",
-       "      <td>0.013</td>\n",
-       "      <td>111935419.539</td>\n",
-       "      <td>1118959.349</td>\n",
-       "      <td>1402.915</td>\n",
-       "      <td>19.542</td>\n",
+       "      <td>0.145</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>111813348.743</td>\n",
+       "      <td>1183510.514</td>\n",
+       "      <td>1402.989</td>\n",
+       "      <td>18.626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>ppo</td>\n",
        "      <td>Pendulum-v1</td>\n",
-       "      <td>0.001</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>-3500493246.932</td>\n",
-       "      <td>17578616.918</td>\n",
-       "      <td>-1216.122</td>\n",
-       "      <td>3.518</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-3497349974.322</td>\n",
+       "      <td>16938658.584</td>\n",
+       "      <td>-1215.135</td>\n",
+       "      <td>6.086</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -423,7 +424,7 @@
        "4       CAT-RL               CartPole-v1         0.000             0.000   \n",
        "16      CAT-RL            LunarLander-v2         0.000             0.000   \n",
        "7       CAT-RL            MountainCar-v0         0.965             0.020   \n",
-       "10      CAT-RL  MountainCarContinuous-v0         0.719             0.402   \n",
+       "10      CAT-RL  MountainCarContinuous-v0         0.706             0.423   \n",
        "13      CAT-RL               Pendulum-v1         0.019             0.015   \n",
        "2   TileCoding                Acrobot-v1         0.860             0.021   \n",
        "5   TileCoding               CartPole-v1         0.000             0.000   \n",
@@ -437,19 +438,19 @@
        "6         binQ            MountainCar-v0         0.198             0.013   \n",
        "9         binQ  MountainCarContinuous-v0         0.407             0.023   \n",
        "12        binQ               Pendulum-v1         0.022             0.002   \n",
-       "18         ppo                Acrobot-v1         0.016             0.004   \n",
+       "18         ppo                Acrobot-v1         0.014             0.002   \n",
        "19         ppo               CartPole-v1         0.000             0.000   \n",
        "23         ppo            LunarLander-v2         0.000             0.000   \n",
        "20         ppo            MountainCar-v0         0.000             0.000   \n",
-       "21         ppo  MountainCarContinuous-v0         0.144             0.013   \n",
-       "22         ppo               Pendulum-v1         0.001             0.000   \n",
+       "21         ppo  MountainCarContinuous-v0         0.145             0.015   \n",
+       "22         ppo               Pendulum-v1         0.000             0.000   \n",
        "\n",
        "    accumulated reward  accumulated reward std  avg reward per episode  \\\n",
        "1       -347618363.500            79685500.774                 -55.285   \n",
        "4        251650810.200            57390804.337                  13.599   \n",
        "16     -4025443733.564            71502043.625                -196.053   \n",
        "7      14464492011.118           580858094.467                1161.639   \n",
-       "10       204020978.288            47719812.385                 407.353   \n",
+       "10       188131599.149            42681942.763                 369.512   \n",
        "13    -19360056614.880          1090619204.989                -924.669   \n",
        "2       1020687281.900            92993773.390                 628.536   \n",
        "5        185847254.600             1584575.768                  10.062   \n",
@@ -463,19 +464,19 @@
        "6        777513395.587            97302647.137                 173.669   \n",
        "9        661400922.269            23920781.425                1192.967   \n",
        "12    -15616340075.446           131421759.473                -668.949   \n",
-       "18      -153713306.400             1439701.206                -481.886   \n",
-       "19        61066523.600             1106634.036                  21.237   \n",
-       "23      -240797829.700             3060855.259                 -83.295   \n",
-       "20      -185245079.119             1397603.512                 -92.678   \n",
-       "21       111935419.539             1118959.349                1402.915   \n",
-       "22     -3500493246.932            17578616.918               -1216.122   \n",
+       "18      -154483956.000              314872.537                -483.553   \n",
+       "19        61333226.200              652239.629                  21.256   \n",
+       "23      -236985767.351            10486693.915                 -82.696   \n",
+       "20      -184055625.138             1055579.186                 -92.338   \n",
+       "21       111813348.743             1183510.514                1402.989   \n",
+       "22     -3497349974.322            16938658.584               -1215.135   \n",
        "\n",
        "    avg reward per episode std  \n",
        "1                       53.239  \n",
        "4                        3.942  \n",
        "16                       6.175  \n",
        "7                       48.126  \n",
-       "10                      94.292  \n",
+       "10                      89.419  \n",
        "13                     139.056  \n",
        "2                       25.840  \n",
        "5                        0.064  \n",
@@ -489,15 +490,15 @@
        "6                       16.418  \n",
        "9                       49.881  \n",
        "12                      10.810  \n",
-       "18                       3.931  \n",
-       "19                       0.277  \n",
-       "23                       1.386  \n",
-       "20                       0.762  \n",
-       "21                      19.542  \n",
-       "22                       3.518  "
+       "18                       2.048  \n",
+       "19                       0.219  \n",
+       "23                       2.677  \n",
+       "20                       0.710  \n",
+       "21                      18.626  \n",
+       "22                       6.086  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,14 +804,43 @@
     "            time_l.append(temp[\"time\"].values[-1])\n",
     "        mean_time = mean(time_l)\n",
     "        std_time = std(time_l)\n",
-    "        info_l.append({\"method\": method, \"env\": env, \"time\": mean_time, \"std time\": std_time})\n",
+    "        info_l.append({\"method\": method, \"env\": env, \"time\": mean_time, \"std time\": std_time})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"results\"\n",
+    "for env in envs:\n",
+    "    max_episodes = max_episodes_dict[env]\n",
+    "    policy_episodes, experiment_episodes = split_max_episodes(max_episodes) \n",
+    "    for algo in algos:\n",
+    "        time_l = []\n",
+    "        for seed in seeds_icml:\n",
+    "            \n",
+    "            if env == \"MountainCarContinuous-v0\":\n",
+    "                model = f\"icml_{policy_episodes}_{MOUNTAINCARCONTINUOUS_K}_{algo}_{experiment_episodes}\"\n",
+    "            elif env == \"Pendulum-v1\":\n",
+    "                model = f\"icml_{policy_episodes}_{PENDULUM_K}_{algo}_{experiment_episodes}\"\n",
+    "            else:\n",
+    "                model = f\"icml_{policy_episodes}_{algo}_{experiment_episodes}\" \n",
+    "                \n",
+    "            path = f\"{folder}/icml/{env}/{model}_{seed}_info.csv\"\n",
+    "            temp = pd.read_csv(path)\n",
+    "            time_l.append(temp[\"total_train_time\"].values[-1])\n",
+    "        mean_time = mean(time_l)\n",
+    "        std_time = std(time_l)\n",
+    "        info_l.append({\"method\": algo, \"env\": env, \"time\": mean_time, \"std time\": std_time})\n",
     "\n",
     "info_df = pd.DataFrame(info_l).sort_values(by=[\"method\", \"env\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -842,158 +872,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ppo</td>\n",
+       "      <td>Acrobot-v1</td>\n",
+       "      <td>1204.923</td>\n",
+       "      <td>23.624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CAT-RL</td>\n",
-       "      <td>Acrobot-v1</td>\n",
-       "      <td>271.947</td>\n",
-       "      <td>5.555</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CAT-RL</td>\n",
+       "      <td>ppo</td>\n",
        "      <td>CartPole-v1</td>\n",
-       "      <td>8.414</td>\n",
-       "      <td>1.686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>CAT-RL</td>\n",
-       "      <td>LunarLander-v2</td>\n",
-       "      <td>262.725</td>\n",
-       "      <td>4.276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CAT-RL</td>\n",
-       "      <td>MountainCar-v0</td>\n",
-       "      <td>101.825</td>\n",
-       "      <td>11.087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>CAT-RL</td>\n",
-       "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>13.294</td>\n",
-       "      <td>3.915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>CAT-RL</td>\n",
-       "      <td>Pendulum-v1</td>\n",
-       "      <td>206.358</td>\n",
-       "      <td>2.084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TileCoding</td>\n",
-       "      <td>Acrobot-v1</td>\n",
-       "      <td>425.867</td>\n",
-       "      <td>14.233</td>\n",
+       "      <td>2106.327</td>\n",
+       "      <td>92.317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>TileCoding</td>\n",
-       "      <td>CartPole-v1</td>\n",
-       "      <td>26.049</td>\n",
-       "      <td>0.155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>TileCoding</td>\n",
+       "      <td>ppo</td>\n",
        "      <td>LunarLander-v2</td>\n",
-       "      <td>2506.457</td>\n",
-       "      <td>78.559</td>\n",
+       "      <td>3879.346</td>\n",
+       "      <td>183.861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>TileCoding</td>\n",
+       "      <th>2</th>\n",
+       "      <td>ppo</td>\n",
        "      <td>MountainCar-v0</td>\n",
-       "      <td>337.447</td>\n",
-       "      <td>1.735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>TileCoding</td>\n",
-       "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>1314.878</td>\n",
-       "      <td>83.438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>TileCoding</td>\n",
-       "      <td>Pendulum-v1</td>\n",
-       "      <td>566.397</td>\n",
-       "      <td>2.232</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>binQ</td>\n",
-       "      <td>Acrobot-v1</td>\n",
-       "      <td>134.801</td>\n",
-       "      <td>2.318</td>\n",
+       "      <td>1267.065</td>\n",
+       "      <td>39.017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>binQ</td>\n",
-       "      <td>CartPole-v1</td>\n",
-       "      <td>3.714</td>\n",
-       "      <td>0.098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>binQ</td>\n",
-       "      <td>LunarLander-v2</td>\n",
-       "      <td>161.921</td>\n",
-       "      <td>10.031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>binQ</td>\n",
-       "      <td>MountainCar-v0</td>\n",
-       "      <td>78.156</td>\n",
-       "      <td>1.118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>binQ</td>\n",
+       "      <td>ppo</td>\n",
        "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>46.534</td>\n",
-       "      <td>0.756</td>\n",
+       "      <td>1148.086</td>\n",
+       "      <td>35.347</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>binQ</td>\n",
+       "      <th>4</th>\n",
+       "      <td>ppo</td>\n",
        "      <td>Pendulum-v1</td>\n",
-       "      <td>113.616</td>\n",
-       "      <td>0.599</td>\n",
+       "      <td>1508.879</td>\n",
+       "      <td>70.890</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        method                       env     time  std time\n",
-       "1       CAT-RL                Acrobot-v1  271.947     5.555\n",
-       "4       CAT-RL               CartPole-v1    8.414     1.686\n",
-       "16      CAT-RL            LunarLander-v2  262.725     4.276\n",
-       "7       CAT-RL            MountainCar-v0  101.825    11.087\n",
-       "10      CAT-RL  MountainCarContinuous-v0   13.294     3.915\n",
-       "13      CAT-RL               Pendulum-v1  206.358     2.084\n",
-       "2   TileCoding                Acrobot-v1  425.867    14.233\n",
-       "5   TileCoding               CartPole-v1   26.049     0.155\n",
-       "17  TileCoding            LunarLander-v2 2506.457    78.559\n",
-       "8   TileCoding            MountainCar-v0  337.447     1.735\n",
-       "11  TileCoding  MountainCarContinuous-v0 1314.878    83.438\n",
-       "14  TileCoding               Pendulum-v1  566.397     2.232\n",
-       "0         binQ                Acrobot-v1  134.801     2.318\n",
-       "3         binQ               CartPole-v1    3.714     0.098\n",
-       "15        binQ            LunarLander-v2  161.921    10.031\n",
-       "6         binQ            MountainCar-v0   78.156     1.118\n",
-       "9         binQ  MountainCarContinuous-v0   46.534     0.756\n",
-       "12        binQ               Pendulum-v1  113.616     0.599"
+       "  method                       env     time  std time\n",
+       "0    ppo                Acrobot-v1 1204.923    23.624\n",
+       "1    ppo               CartPole-v1 2106.327    92.317\n",
+       "5    ppo            LunarLander-v2 3879.346   183.861\n",
+       "2    ppo            MountainCar-v0 1267.065    39.017\n",
+       "3    ppo  MountainCarContinuous-v0 1148.086    35.347\n",
+       "4    ppo               Pendulum-v1 1508.879    70.890"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
